--- a/force-app/main/default/classes/Controller_TaxCheckDuplicate.cls
+++ b/force-app/main/default/classes/Controller_TaxCheckDuplicate.cls
@@ -77,7 +77,7 @@ public without sharing class Controller_TaxCheckDuplicate {
                         acc.Area__c =sapResBody.data[0].land1+'_'+sapResBody.data[0].regio ;
                         }
                         
-                        acc.Shortname__c = sapResBody.data[0].sortl ;
+                        // acc.Shortname__c = sapResBody.data[0].sortl ; //###### Thu Aug 17 17:10:52 CST 2023
                         // acc.Officialcode__c = sapResBody.data[0].stcd5 ;
                         acc.AccountSyncSAPMsg__c = 'sap已经存在该客户，直接从sap拉取客户数据同步回CRM';
                         update acc ; 
